# fat32

./: .gitignore  Cargo.toml  LICENSE  README.md
fat32/: Cargo.toml
fat32-ffi/: Cargo.toml  bindings.h  build.rs
fat32-ffi/src/: lib.rs
fat32-test/: Cargo.toml  Makefile  test.hex
fat32-test/benches/: fat32-bench.rs
fat32-test/examples/: fat32-bench.rs
fat32-test/src/: device.rs  lib.rs  main.rs  other_fat32.rs  test1_create_list_cd.rs  test2_read_write.rs  test3_delete.rs  test4_rename.rs  test5_attr.rs
fat32-trait/: Cargo.toml
fat32-trait/src/: lib.rs
fat32/doc/: record.md
fat32/examples/: ls.rs  rw.rs
fat32/src/: cache.rs  device.rs  dir.rs  entry.rs  fat.rs  fat32.rs  layout.rs  lib.rs  utils.rs
