[package]
name = "fat32-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fat32 = {path = "../fat32"}

[build-dependencies]
cbindgen = "0.20.0"

#[lib]
#name = "fat32ffi"
#crate-type = ["staticlib"]