[package]
name = "fat32-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
mfat32 = {path = "../fat32",package = "fat32"}
log = "0.4.14"
fat32 = "0.2.0"
block_device = "0.1.3"
fscommon = "0.1.1"
fatfs = { git = "https://github.com/rafalh/rust-fatfs",version = "0.4" }



[dev-dependencies]
criterion = "0.3.5"
[[bench]]
name = "fat32-bench"
harness = false